# teleop

./: Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: _build.yml  _build_macos.yml  _build_windows.yml  ci.yml  codecov.yml
examples/: client.rs  server.rs
schema/: echo.capnp  teleop.capnp
scripts/: check_examples.ps1  check_examples.sh  msrv_pin_dependencies.sh  switch_rust_toolchain.sh
src/: cancellation.rs  internal.rs  lib.rs
src/attach/: dummy_attacher.rs  inotify_attacher.rs  kqueue_attacher.rs  mod.rs  unix_attacher.rs  unix_socket.rs  windows_named_pipe.rs  windows_unix_socket.rs
src/attach/attacher/: dummy.rs  inotify.rs  kqueue.rs  mod.rs  unix.rs
src/operate/: mod.rs
src/operate/capnp/: echo.rs  mod.rs
