[package]
name = "teleop"
version = "0.4.0-dev"
edition = "2021"
rust-version = "1.85.0"
license-file = "LICENSE"
description = "Teleoperate Rust Processes"
documentation = "https://docs.rs/teleop"
repository = "https://github.com/arnodb/teleop"
readme = "README.md"

[dependencies]
async-signal = "0.2"
async-stream = "0.3"
capnp = "0.25"
capnp-rpc = "0.25"
futures = "0.3"
smol = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[build-dependencies]
capnpc = "0.25"

[dev-dependencies]
sluice = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
