[package]
name = "teleop"
version = "0.4.0"
edition = "2021"
rust-version = "1.88.0"
license-file = "LICENSE"
description = "Teleoperate Rust Processes"
documentation = "https://docs.rs/teleop"
repository = "https://github.com/arnodb/teleop"
readme = "README.md"

[features]
default = []

[dependencies]
async-io = "2"
async-net = "2"
async-signal = "0.2"
async-stream = "0.3"
capnp = "0.25"
capnp-rpc = "0.25"
futures = "0.3"
inotify = { version = "0.11", optional = true }
sysinfo = "0.38"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
kqueue = { version = "1" }

[target.'cfg(windows)'.dependencies]
uds_windows = { version = "1" }

[build-dependencies]
capnpc = "0.25"

[dev-dependencies]
assert_matches = "1"
sluice = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
